fixing main__wrap width

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,7 @@ header {
 
 /* MAIN WRAP */
 .main__wrap {
-  width: 90;
+  width: 90%;
   position: relative;
   background: white;
   z-index: 1; }
